--- a/client/styles/_tabs.scss
+++ b/client/styles/_tabs.scss
@@ -41,7 +41,7 @@
   // tab height is 42px
   height: calc(64vh - 42px);
   padding-bottom: 5px;
-  align-items: center;
+  // align-items: center;
 }
 
 // USER PAGE TABS
