STYLE / add grid layout, need to work on it

--- a/client/styles/_postcard.scss
+++ b/client/styles/_postcard.scss
@@ -18,7 +18,6 @@
   align-items: center;
 }
 
-
 // fonts
 .post-card-detail {
   display: flex;
@@ -45,11 +44,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  .post-card-share-button, .post-card-delete-button {
+  .post-card-share-button,
+  .post-card-delete-button {
     margin-left: 10px;
   }
 }
 
 .vote-button {
+  @include mixin_utils.flex-col-center-content;
   width: 40px !important;
 }
