--- a/client/styles/_tabs.scss
+++ b/client/styles/_tabs.scss
@@ -35,7 +35,7 @@
 }
 
 // HOME PAGE TABS
-.homePage-tabs .tab-content .tab-pane {
+.homePage-tabs .tab-content .active {
   padding-top: 5px;
   overflow: scroll;
   // tab height is 42px
