--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -243,8 +243,6 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
   .post-card {
     max-width: none;
     height: 300px !important;
-
-
   }
 
   // COMMENT CARDS
@@ -263,7 +261,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     align-items: center;
 
     .post-card-body {
-      display:flex;
+      display: flex;
       flex-direction: column;
       justify-content: flex-end;
       height: 100%;
@@ -275,7 +273,8 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
       align-items: end;
       // margin-top: 10px !important;
       margin-bottom: 10px;
-      .post-card-share-button, .post-card-delete-button {
+      .post-card-share-button,
+      .post-card-delete-button {
         margin-top: 10px;
       }
     }
@@ -303,10 +302,13 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     .tab-content {
       .active {
         display: grid;
+        grid-auto-rows: 300px;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 5px;
+        grid-auto-flow: dense;
       }
     }
   }
-
 }
 
 @include media-breakpoint-up(md) {
